<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/app_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_32"
        android:layout_margin="@dimen/margin_10"
        android:textAlignment="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_marginTop="@dimen/margin_20"
        android:padding="@dimen/padding_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/que1"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="@dimen/txt_12"
                android:textAlignment="textStart"
                android:background="@drawable/btn_white_bg"
                android:padding="@dimen/padding_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/que2"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="@dimen/txt_12"
                android:textAlignment="textStart"
                android:background="@drawable/btn_white_bg"
                android:layout_marginTop="@dimen/margin_10"
                android:padding="@dimen/padding_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/que3"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="@dimen/txt_12"
                android:textAlignment="textStart"
                android:background="@drawable/btn_white_bg"
                android:layout_marginTop="@dimen/margin_10"
                android:padding="@dimen/padding_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/que4"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="@dimen/txt_12"
                android:textAlignment="textStart"
                android:background="@drawable/btn_white_bg"
                android:layout_marginTop="@dimen/margin_10"
                android:padding="@dimen/padding_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/que5"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="@dimen/txt_12"
                android:textAlignment="textStart"
                android:background="@drawable/btn_white_bg"
                android:layout_marginTop="@dimen/margin_10"
                android:padding="@dimen/padding_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/que6"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="@dimen/txt_12"
                android:textAlignment="textStart"
                android:background="@drawable/btn_white_bg"
                android:layout_marginTop="@dimen/margin_10"
                android:padding="@dimen/padding_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/que7"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="@dimen/txt_12"
                android:textAlignment="textStart"
                android:background="@drawable/btn_white_bg"
                android:layout_marginTop="@dimen/margin_10"
                android:padding="@dimen/padding_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/que8"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="@dimen/txt_12"
                android:textAlignment="textStart"
                android:background="@drawable/btn_white_bg"
                android:layout_marginTop="@dimen/margin_10"
                android:padding="@dimen/padding_4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/que9"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:textSize="@dimen/txt_12"
                android:textAlignment="textStart"
                android:background="@drawable/btn_white_bg"
                android:layout_marginTop="@dimen/margin_10"
                android:padding="@dimen/padding_4" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>